[package]
name = "reset"
version = "0.0.21"
edition = "2021"

[dependencies]
ttkmd-if = {path = "../../crates/ttkmd-if", version = "0.0.21" }
luwen-core = {path = "../../crates/luwen-core", version = "0.0.21"}
luwen-if = {path = "../../crates/luwen-if", version = "0.0.21"}
luwen-ref = {path = "../../crates/luwen-ref", version = "0.0.21" }
clap = { version = "4.4.6", features = ["derive"] }
prometheus_exporter = "0.8.5"
prometheus = { version = "0.13.3", features = ["process"] }
