[package]
name = "luwen-ref"
version = "0.0.23"
description = "Reference pci communication implementation"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ttkmd-if = {path = "../ttkmd-if", version = "0.0.23" }
luwen-if = {path = "../luwen-if", version = "0.0.23" }
luwen-core = {path = "../luwen-core", version = "0.0.23"}

thiserror = "1.0.40"

indicatif = "0.17.7"
tracing = "0.1.40"
